# fiap_tech_cha_fase1

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
src/fiap_tech_cha_fase1/: __main__.py  settings.py
src/fiap_tech_cha_fase1/app/: main.py
src/fiap_tech_cha_fase1/app/core/: logging_config.py
src/fiap_tech_cha_fase1/app/services/: dataset_service.py  livros_service.py  stats_service.py
src/fiap_tech_cha_fase1/app/v1/: schemas.py
src/fiap_tech_cha_fase1/app/v1/routers/: livros.py  stats.py
src/fiap_tech_cha_fase1/data/: livros.csv
src/fiap_tech_cha_fase1/scripts/: scraper.py
tests/: test_dataset_service.py  test_livros.py  test_overview_service.py  test_scraper.py
