[project]
name = "fiap-tech-cha-fase1"
version = "0.1.0"
description = ""
authors = [
    {name = "Wilder Andreatta",email = "r3d_l1w@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pypdf2 (>=3.0.1,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "markitdown[all] (==0.1.3)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"

